<resources>
    <string name="app_name">Quintessentiel</string>

    <!-- Connection and signUp page -->
    <string name="titleConnection">Se connecter</string>
    <string name="titleSignUp">Création de compte</string>
    <string name="lblUsername">Nom d\'utilisateur</string>
    <string name="lblEmail">Adresse courriel</string>
    <string name="lblPassword">Mot de passe</string>
    <string name="lblConfirmPassword">Confirmez le mot de passe</string>
    <string name="btnConnection">Connexion</string>
    <string name="btnSignUp">Confirmer</string>
    <string name="lblSecQuestion">Question de sécurité</string>
    <string name="responseSecQuestion">Réponse</string>
    <string name="hintUsername">Ex: Gazelle123</string>
    <string name="hintPassword">Ex: Abc123X</string>
    <string name="hintEmail">Ex: lolipop3000@gmail.com</string>
    <string name="hintSecQuestion">Ex: Un chat</string>
    <string name="btnCreateAccount">Créer un compte</string>
    <string name="btnConnectAccount">Se connecter</string>

    <!-- Catalog Page -->
    <string name="txtProductTitle">Product Title PlaceHolder</string>
    <string name="lblProductPrice">Prix: </string>
    <string name="productPrice">0.00$</string>
    <string name="txtPrice">itemPrice</string>
    <string name="txtProductDescription">Product Description PlaceHolder</string>
    <string name="txtProductState">product State PlaceHolder</string>
    <string name="txtButtonProductAddCart">Ajouter au panier</string>
    <string name="stateAvailable">En stock</string>
    <string name="stateUnavailable">En rupture de stock</string>

    <!-- Form page -->
    <string name="titleFormCustomRecipe">Recette personnalisée</string>
    <string name="descCustomRecipe">Veuillez remplir le formulaire suivant pour recevoir par courriel la suggestion d\'un produit 100% personnalisé.</string>
    <string name="lblAge">Âge</string>
    <string name="lblSkinType">Type de peau</string>
    <string name="lblWorkEnvironment">Environnement de travail</string>
    <string name="hintWorkEnvironment">Décrivez votre environnement de travail.</string>
    <string name="lblEffect">Effet escompté</string>
    <string name="lblQuantity">Quantité</string>
    <string name="lblMl">mL</string>
    <string name="lblFragrance">Fragrance</string>
    <string name="lblProductType">Type de produit</string>
    <string name="lblMoreInfos">Informations supplémentaires</string>
    <string name="hintMoreInfos">Demande spéciale, allergie, commentaire, etc.</string>
    <string name="btnConfirm">Confirmer</string>
    <string name="btnSendForm">Envoyer</string>
    <string name="error_quantity">La quantité doit être plus grande que zéro.</string>
    <string name="error_age">Doit se situer entre 0 et 100 ans.</string>
    <string name="error_empty_field">Ce champ ne peut pas être vide.</string>
 
    <string name="confirm_form_sent">Demande de produit personnalisée envoyée! Vous devriez avoir des nouvelles d\'ici quelques jours.</string>

    <!-- Menu -->
    <string name="welcomeName">Bonjour %1$s !</string>
    <string name="notConnectedWelcome">Vous n\'êtes pas connecté</string>

    <!-- Commandes -->
    <string name="cart_cancel_button">Supprimer</string>
    <string name="cancel_order_btn">Annuler la commande</string>
    <string name="command_btn">Commander</string>
    <string name="itemCatalog">Catalogue</string>
    <string name="itemCart">Mon panier</string>
    <string name="itemPersonalisedRecipe">Recette personalisée</string>
    <string name="itemDarkTheme">Mode nuit</string>
    <string name="itemLogOut">Déconnexion</string>
    <string name="my_orders">Mes commandes</string>
    <string name="order">Commander</string>
    <string name="order_details">Détails de la commande</string>
    <string name="lblConfirmationProduct">Confirmation</string>
    <string name="lblDescConfirmationProduct">Confirmer les informations entrées ci-dessous pour envoyer la demande à Quintessentiel.</string>

    <!-- Noptifications -->
    <string name="notificationTitle">Revenez-nous voir!</string>
    <string name="notificationDesc">Au plaisir de vous revoir!</string>


    <!-- Noptifications -->
    <string name="notificationTitle">Revenez-nous voir!</string>
    <string name="notificationDesc">Au plaisir de vous revoir!</string>

</resources>
